--- a/.github/workflows/OEC.yml
+++ b/.github/workflows/OEC.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Run Python script
-        run: python directory/code1.py
+        run: OfirBador/testing/code1.py
