--- a/.github/workflows/OEC.yml
+++ b/.github/workflows/OEC.yml
@@ -9,10 +9,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      
-      - name: Run Python script
-        run: python testing/code1.py
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+          
+      - name: Run script
+        run: |
+          python testing/code1.py
