--- a/.github/workflows/OEC.yml
+++ b/.github/workflows/OEC.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run_scripts:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -21,6 +21,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip    
           
-      - name: Run script
+      - name: Run Scripts
         run: |
-          python code1.py
+          if grep -q "name1" file.txt; then
+             python code1.py
+          fi
+          if grep -q "name2" file.txt; then
+            python code2.py
+          fi
