--- a/.github/workflows/OEC.yml
+++ b/.github/workflows/OEC.yml
@@ -1,4 +1,4 @@
-name: Directory Change Workflow
+name: Trigger Scripts based on File Contant
 
 on:
 #   push:
@@ -21,11 +21,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip    
           
-      - name: Run Scripts
+      - name: Run Trigger Scripts
         run: |
-          if grep -q "name1" file.txt; then
-             python code1.py
-          fi
-          if grep -q "name2" file.txt; then
-            python code2.py
-          fi
+          python trigger_scripts.py
