--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,8 @@ jobs:
           
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip    
+          python -m pip install --upgrade pip 
+          pip install python-dotenv
           
       - name: Run Trigger Scripts
         run: |
