--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
           
       - name: Run Trigger Scripts
         run: |
-          python OEC/test.py
+          python OEC/test.py --test_secret ${{secrets.TEST}}
