--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip 
+          python -m pip install -r OEC/requirements.txt
           
       - name: Run Trigger Scripts
         run: |
