--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -1,1 +1,23 @@
+name: check secrets in script
 
+on:
+  workflow_dispatch:
+
+jobs:
+  run_scripts:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          
+      - name: Run Trigger Scripts
+        run: |
+          python OEC/test1.py 
