--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
           
       - name: Run Trigger Scripts
         run: |
-          python OEC/test.py 
+          python OEC/test.py --git_secret ${{ secrets.GIT_TOKEN }}
