--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip 
-          python -m pip install -r OEC/requirements.txt 
           
       - name: Run Trigger Scripts
+        env:
+          SECRET_VALUE_1: ${{ secrets.TEST1 }}
+          SECRET_VALUE_2: ${{ secrets.TEST2 }}
         run: |
-          python OEC/test.py --git_secret ${{ secrets.GIT_TOKEN }}
+          python OEC/test.py 
