--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           
       - name: Run Trigger Scripts
         env:
-          SECRET_VALUE_1: ${{ secrets.TEST1 }}
+          SECRET_VALUE_1: ${{ secrets.TEST }}
           SECRET_VALUE_2: ${{ secrets.TEST2 }}
         run: |
           python OEC/test.py 
