--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
           
       - name: Run Trigger Scripts
         run: |
-          python OEC/another/test.py 
+          python OEC/test_functions/function_test.py 
